--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,8 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v1
         with:
-          go-version: latest
+          go-version: '^1.18'
+          check-latest: true
 
       - name: Check out code
         uses: actions/checkout@v1
