--- a/action.yml
+++ b/action.yml
@@ -13,22 +13,18 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Download health checker binary
+    - name: Download latest slashping
+      uses: robinraju/release-downloader@v1.3
+      with:
+        repository: "caquino/slashping"
+        latest: true
+        fileName: "slashping_*_Linux_x86_64.tar.gz"
+        token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Extract slashping release
       shell: bash
       run: |
-        curl -s https://api.github.com/repos/caquino/slashping/releases/latest
-        gem install octokit --silent
-        gem install dogapi --silent
-    - name: Export extra data
+        tar -zxvpf slashping_*_Linux_x86_64.tar.gz
+    - name: Execute slashping
       shell: bash
       run: |
-        if [ "${{ inputs.metrics-type }}" == "velocity" ]; then
-          echo "PR_NUMBER=${{github.event.pull_request.number}}" >> $GITHUB_ENV
-          echo "ACTION=${{github.event.action}}" >> $GITHUB_ENV
-        else
-          echo "ACTION=${{ inputs.metrics-type }}" >> $GITHUB_ENV
-        fi
-    - id: metric
-      shell: bash
-      run: |
-        ruby ${{ github.action_path }}/report_github_metrics.rb ${{github.repository}} ${{github.run_id}} ${{ inputs.datadog-metric-prefix }} '${{ inputs.teams }}' '${{ inputs.tagged-branches }}' '${{ inputs.custom-tags }}'
+        ./slashping
